<resources>
    <string name="app_name">Audiobooks App</string>
    <string name="heaven_of_freedom_string">Heaven of Freedom</string>
    <string name="by_rabindranath_tagore">By Rabindranath Tagore</string>
    <string name="paragraph1">
        Where the mind is without fear and the head is held high. \n
        Where knowledge is free. \n
        Where the world has not been broken up into fragments by narrow domestic walls. \n
        Where words come out from the depth of truth. \n
        Where tireless striving stretches its arms towards perfection. \n
        Where the clear stream of reason has not lost its way into the dreary desert sand of dead habit. \n
        Where the mind is led forward by thee into ever-widening thought and action. \n
        Into that heaven of freedom, my Father, let my country awake.\n\n</string>
    <string name="wandering_singers">Wandering Singers</string>
    <string name="by_sarojini_naidu">By Sarojini Naidu</string>
    <string name="blue_jay">Blue Jay</string>
    <string name="by_paul_lake">By Paul Lake</string>
    <string name="paragraph3">A sound like a rusty pump beneath our window\n
Woke us at dawn.  Drawing the curtains back,\n
We saw—through milky light, above the doghose—\n
A blue jay lecturing a neighbor\'s cat\n
So fiercely that, at first, it seemed to wonder\n
When birds forgot the diplomacy of flight\n
And met, instead, each charge with a wild swoop,\n
Metallic cry, and angry thrust of beak.\n\n

Later, we found the reason.  Near the fence\n
Among the flowerless stalks of daffodils,\n
A weak piping of feathers.  Too late now to go back\n
To nest again among the sheltering leaves.\n
And so, harrying the dog, routing the cat,\n
And taking sole possession of the yard,\n
The mother swooped all morning.\n

I found her there\n
Still fluttering round my head, still scattering\n
The troops of blackbirds, head cocked toward my car\n
As if it were some lurid animal,\n
When I returned from work.  Still keeping faith.\n
As if what I had found by afternoon\n
Silent and still and hidden in tall grass\n
Might rise again above the fallen world;\n
As if the dead were not past mothering.\n\n</string>
    <string name="an_immorality">An Immorality</string>
    <string name="by_ezra_pound">By Ezra Pound</string>
    <string name="paragraph5">Sing we for love and idleness,\n
Naught else is worth the having.\n\n

Though I have been in many a land,\n
There is naught else in living.\n\n

And I would rather have my sweet,\n
Though rose-leaves die of grieving,\n\n

Than do high deeds in Hungary\n
To pass all men\'s believing.\n\n</string>
    <string name="silver">Silver</string>
    <string name="by_walter_de_la_mare">By Walter de la Mare</string>
    <string name="paragraph6">Slowly, silently, now the moon \n
Walks the night in her silver shoon; \n
This way, and that, she peers, and sees \n
Silver fruit upon silver trees; \n
One by one the casements catch \n
Her beams beneath the silvery thatch; \n
Couched in his kennel, like a log, \n
With paws of silver sleeps the dog; \n
From their shadowy cote the white breasts peep \n
Of doves in a silver-feathered sleep; \n
A harvest mouse goes scampering by, \n
With silver claws and a silver eye; \n
And moveless fish in the water gleam, \n
By silver reeds in a silver stream. \n\n</string>
    <string name="the_star_lovers">The Star Lovers</string>
    <string name="by_grace_james">By Grace James</string>
    <string name="tparagraph4">The Star Lovers is one of our Favorite Fairy Tales.\n
An illustration for the story The Star Lovers by the author Grace James\n
All you that are true lovers, I beseech you pray the gods for fair weather upon the seventh night of the seventh moon.\n

For patience\’s sake and for dear love\’s sake, pray, and be pitiful that upon that night there may be neither rain, nor hail, nor cloud, nor thunder, nor creeping mist.\n

Hear the sad tale of the Star Lovers and give them your prayers.\n

The Weaving Maiden was the daughter of a Deity of Light. Her dwelling was upon the shore of the Milky Way, which is the Bright River of Heaven. All the day long she sat at her loom and plied her shuttle, weaving the gay garments of the gods. Warp and woof, hour by hour the coloured web grew till it lay fold on fold piled at her feet. Still she never ceased her labour, for she was afraid. She had heard a saying:\n

\“Sorrow, age-long sorrow, shall come upon the Weaving Maiden when she leaves her loom.\” \n

So she laboured, and the gods had garments to spare. But she herself, poor maiden, was ill-clad; she recked nothing of her attire or of the jewels that her father gave her. She went barefoot, and let her hair hang down unconfined. Ever and anon a long lock fell upon the loom, and back she flung it over her shoulder. She did not play with the children of Heaven, or take her pleasure with celestial youths and maidens. She did not love or weep. She was neither glad nor sorry. She sat weaving, weaving ... and wove her being into the many-coloured web.\n\n

        Now her father, the Deity of Light, grew angry. He said, \“Daughter, you weave too much.\” \n

\“It is my duty,\” she said.\n

\“At your age to talk of duty!\” said her father. \“Out upon you!\”\n

\“Wherefore are you displeased with me, my father?\” she said, and her fingers plied the shuttle.\n

\“Are you a stock or a stone, or a pale flower by the wayside?\”\n

\“Nay,\” she said, \“I am none of these.\”\n

\“Then leave your loom, my child, and live; take your pleasure, be as others are.\”\n

\“And wherefore should I be as others are?\” she said.\n

\“Never dare to question me. Come, will you leave your loom?\”\n

She said, \“Sorrow, age-long sorrow, shall come upon the Weaving Maiden when she leaves her loom.\”\n\n

        \“A foolish saying,\” cried her father, \“not worthy of credence. What do we know of age-long sorrow? Are we not gods?\” With that he took her shuttle from her hand gently, and covered the loom with a cloth. And he caused her to be very richly attired, and they put jewels upon her and garlanded her head with flowers of Paradise. And her father gave her for spouse the Herd Boy of Heaven, who tended his flocks upon the banks of the Bright River.\n

Now the Maiden was changed indeed. Her eyes were stars and her lips were ruddy. She went dancing and singing all the day. Long hours she played with the children of Heaven, and she took her pleasure with the celestial youths and maidens. Lightly she went; her feet were shod with silver. Her lover, the Herd Boy, held her by the hand. She laughed so that the very gods laughed with her, and High Heaven re-echoed with sounds of mirth. She was careless; little did she think of duty or of the garments of the gods. As for her loom, she never went near it from one moon\’s end to another.\n

\“I have my life to live,\” she said; \“I\’ll weave it into a web no more.\”\n

And the Herd Boy, her lover, clasped her in his arms. Her face was all tears and smiles, and she hid it on his breast. So she lived her life. But her father, the Deity of Light, was angry.\n

\“It is too much,\” he said. \“Is the girl mad? She will become the laughing-stock of Heaven. Besides, who is to weave the new spring garments of the gods?\”\n

Three times he warned his daughter.\n

Three times she laughed softly and shook her head.\n

\“Your hand opened the door, my father,\” she said, \“but of a surety no hand either of god or of mortal can shut it.\”\n

He said, \“You shall find it otherwise to your cost.\” And he banished the Herd Boy for ever and ever to the farther side of the Bright River. The magpies flew together, from far and near, and they spread their wings for a frail bridge across the river, and the Herd Boy went over by the frail bridge. And immediately the magpies flew away to the ends of the earth and the Weaving Maiden could not follow. She was the saddest thing in Heaven. Long, long she stood upon the shore, and held out her arms to the Herd Boy, who tended his oxen desolate and in tears. Long, long she lay and wept upon the sand. Long, long she brooded, looking on the ground.\n

She arose and went to her loom. She cast aside the cloth that covered it. She took her shuttle in her hand.\n

\“Age-long sorrow,\” she said, \“age-long sorrow!\” Presently she dropped the shuttle. \“Ah,\” she moaned, \“the pain of it,\” and she leaned her head against the loom.\n

But in a little while she said, \“Yet I would not be as once I was. I did not love or weep, I was neither glad nor sorry. Now I love and I weep—I am glad, and I am sorry.\”\n

Her tears fell like rain, but she took up the shuttle and laboured diligently, weaving the garments of the gods. Sometimes the web was grey with grief, sometimes it was rosy with dreams. The gods were fain to go strangely clad. The Maiden\’s father, the Deity of Light, for once was well pleased.\n

\“That is my good, diligent child,\” he said. \“Now you are quiet and happy.\”\n

\“The quiet of dark despair,\” she said. \“Happy! I am the saddest thing in Heaven.\”\n

\“I am sorry,\” said the Deity of Light; \“what shall I do?\”\n

\“Give me back my lover.\”\n

\“Nay, child, that I cannot do. He is banished for ever and ever by the decree of a Deity, that cannot be broken.\”\n

\“I knew it,\” she said.\n

\“Yet something I can do. Listen. On the seventh day of the seventh moon, I will summon the magpies together from the ends of the earth, and they shall be a bridge over the Bright River of Heaven, so that the Weaving Maiden shall lightly cross to the waiting Herd Boy on the farther shore.\”\n

So it was. On the seventh day of the seventh moon came the magpies from far and near. And they spread their wings for a frail bridge. And the Weaving Maiden went over by the frail bridge. Her eyes were like stars, and her heart like a bird in her bosom. And the Herd Boy was there to meet her upon the farther shore.\n

And so it is still, oh, true lovers—upon the seventh day of the seventh moon these two keep their tryst. Only if the rain falls with thunder and cloud and hail, and the Bright River of Heaven is swollen and swift, the magpies cannot make a bridge for the Weaving Maiden. Alack, the dreary time!\n

Therefore, true lovers, pray the gods for fair weather.\n\n
    </string>
    <string name="the_grasshopper_and_the_ant">The Grasshopper and the Ant</string>
    <string name="by_aesop">By Aesop</string>
    <string name="mparagraph3">
The Grasshopper and the Ant (or Ants) is more commonly referred to by its better known title, The Ant and the Grasshopper. This fable\'s moral lesson emphasizes the twin values of hard and planning for the future. It is one of Favorite Fairy Tales.\n
An illustration for the story The Grasshopper and the Ant by the author Aesop.\n
One bright day in late autumn a family of Ants were bustling about in the warm sunshine, drying out the grain they had stored up during the summer, when a starving Grasshopper, his fiddle under his arm, came up and humbly begged for a bite to eat.\n\n

\"What!\" cried the Ants in surprise, \"haven\'t you stored anything away for the winter? What in the world were you doing all last summer?\"\n

\"I didn\'t have time to store up any food,\" whined the Grasshopper; \"I was so busy making music that before I knew it the summer was gone.\"\n

The Ants shrugged their shoulders in disgust.\n

\"Making music, were you?\" they cried. \"Very well; now dance!\" And they turned their backs on the Grasshopper and went on with their work.\n

There\'s a time for work and a time for play.\n\n</string>
</resources>