<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Poem6Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/silver"
        android:background="@drawable/shape5"
        android:textColor="@color/white"
        android:padding="@dimen/padding6"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/silver"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/poet6"
        android:layout_below="@id/silver"
        android:padding="@dimen/padding6"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/by_walter_de_la_mare"
        android:textStyle="bold"
        android:background="@drawable/shape5"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/play6"
        android:layout_width="76dp"
        android:layout_height="49dp"
        android:layout_below="@+id/poet6"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/play"
        android:text="Play"
        android:textColor="@color/white">

    </Button>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/poet6">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/paragraph6"
            android:textSize="17dp"
            android:id="@+id/p6"
            android:lineSpacingExtra="8sp"
            android:layout_below="@id/p6"
            android:padding="20dp"/>

    </ScrollView>
</RelativeLayout>