<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Poem5Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/an_immorality"
        android:background="@drawable/shape5"
        android:textColor="@color/white"
        android:padding="@dimen/padding5"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/an_immorality"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/poet5"
        android:layout_below="@id/an_immorality"
        android:padding="@dimen/padding5"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/by_ezra_pound"
        android:textStyle="bold"
        android:background="@drawable/shape5"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/play5"
        android:layout_width="76dp"
        android:layout_height="49dp"
        android:layout_below="@+id/poet5"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/play"
        android:text="Play"
        android:textColor="@color/white">

    </Button>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/poet5">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/paragraph5"
            android:textSize="17dp"
            android:id="@+id/p5"
            android:lineSpacingExtra="8sp"
            android:layout_below="@id/p5"
            android:padding="20dp"/>
    </ScrollView>


</RelativeLayout>