<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".More3Activity">

    <TextView
        android:id="@+id/grasshoper_and_ant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape5"
        android:textColor="@color/white"
        android:padding="20dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/the_grasshopper_and_the_ant"/>

    <TextView
        android:id="@+id/mpoet3"
        android:layout_below="@id/grasshoper_and_ant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/by_aesop"
        android:textStyle="bold"
        android:background="@drawable/shape5"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/mplay3"
        android:layout_below="@+id/mpoet3"
        android:layout_width="76dp"
        android:layout_height="49dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/play"
        android:text="Play"
        android:textColor="@color/white">

    </Button>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mpoet3">

        <TextView
            android:id="@+id/m3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/mparagraph3"
            android:textSize="17dp"
            android:lineSpacingExtra="8sp"
            android:layout_below="@id/m3"
            android:padding="20dp"/>
    </ScrollView>


</RelativeLayout>